--- a/webeditor/home/index.html
+++ b/webeditor/home/index.html
@@ -1,132 +1,103 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Input URL or Search</title>
-	<link rel="shortcut icon" href="logo.png" type="image/png">
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Input URL or Search</title>
+    <link rel="shortcut icon" href="logo.png" type="image/png">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        div.content {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        img.logo {
+            width: 100px;
+            height: 100px;
+            margin-bottom: 20px;
+            margin-top: 50px;
+        }
+        img.search-icon {
+            width: 20px;
+            height: 20px;
+            opacity: 0.5;
+            margin-left: 10px;
+            margin-top: 10px;
+        }
+        div.search-container {
+            display: flex;
+            align-content: center;
+            border: 1px solid rgba(0, 0, 0, .1);
+            border-radius: 28px;
+        }
+        div.search-container:hover {
+            border: 1px solid transparent;
+            box-shadow: 0 1px 10px rgba(0, 0, 0, .2);
+        }
+        input.input-search {
+            padding: 10px 0;
+            margin: 0 10px;
+            outline: none;
+            border: none;
+            font-weight: 600;
+            font-family: system-ui;
+            font-size: 14px;
+            background-color: transparent;
+            width: 350px;
+        }
+    </style>
+    <script type="text/javascript">
+        function validURL(str) {
+            var pattern = new RegExp('^(https?:\\/\\/)?' + // protocol
+                '((([a-z\\d]([a-z\\d-]*[a-z\\d])*)\\.)+[a-z]{2,}|' + // domain name
+                '((\\d{1,3}\\.){3}\\d{1,3}))' + // OR ip (v4) address
+                '(\\:\\d+)?(\\/[-a-z\\d%_.~+]*)*' + // port and path
+                '(\\?[;&a-z\\d%_.~+=-]*)?' + // query string
+                '(\\#[-a-z\\d_]*)?$', 'i'); // fragment locator
+            return !!pattern.test(str);
+        }
+
+        function goSearch() {
+            var searchValue = document.getElementById('input-search').value;
+
+            if (searchValue.length < 1) {
+                alert('Too short!');
+                return;
+            }
+            if (searchValue.length > 500) {
+                alert('Too long!');
+                return;
+            }
+            if (validURL(searchValue)) {
+                if (searchValue.startsWith('https://') || searchValue.startsWith('http://')) {
+                    window.location.href = searchValue;
+                } else {
+                    window.location.href = 'http://' + searchValue;
+                }
+            } else {
+                window.location.href = 'https://appsmartfind.com/?n=20&q=' + searchValue;
+            }
+        }
+
+        function keyScriptInputSearch(e) {
+            if (e.keyCode == 13) {
+                goSearch();
+                return false;
+            }
+        }
+    </script>
 </head>
+
 <body>
-	<style type="text/css">
-		html, body {
-			padding: 0;
-			margin: 0;
-		}
-	</style>
-	<style type="text/css">
-		div.content {
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			width: 100%;
-			height: 400px;
-			padding: 0;
-			margin: 0;
-		}
-		img.logo {
-			--var-size-logo: 100px;
+    <div class="content">
+        <center>
+            <img src="logo.png" class="logo" draggable="false">
 
-			width: var(--var-size-logo);
-			max-width: var(--var-size-logo);
-			min-width: var(--var-size-logo);
-			height: var(--var-size-logo);
-			max-height: var(--var-size-logo);
-			min-height: var(--var-size-logo);
-			user-select: none;
-			pointer-events: none;
-			margin-bottom: 20px;
-		}
-		img.search-icon {
-			--var-size-search: 20px;
-
-			width: var(--var-size-search);
-			max-width: var(--var-size-search);
-			min-width: var(--var-size-search);
-			height: var(--var-size-search);
-			max-height: var(--var-size-search);
-			min-height: var(--var-size-search);
-			user-select: none;
-			pointer-events: none;
-			opacity: .5;
-			margin-left: 10px;
-			margin-top: 10px;
-		}
-		div.search-container {
-			display: flex;
-			align-content: center;
-			padding: 0;
-			margin: 0;
-			border: 1px solid rgba(0,0,0,.1);
-			border-radius: 100px;
-		}
-		div.search-container:hover {
-			border: 1px solid transparent;
-			box-shadow: 0 1px 10px rgba(0,0,0,.2);
-		}
-		input.input-search {
-			padding: 10px 0;
-			margin: 0 10px;
-			outline: none;
-			border: none;
-			font-weight: 400;
-			font-family: system-ui;
-			font-size: 14px;
-			background-color: transparent;
-			width: 300px;
-		}
-	</style>
-
-	<script type="text/javascript">
-		function validURL(str) {
-			var pattern = new RegExp('^(https?:\\/\\/)?'+ // protocol
-				'((([a-z\\d]([a-z\\d-]*[a-z\\d])*)\\.)+[a-z]{2,}|'+ // domain name
-				'((\\d{1,3}\\.){3}\\d{1,3}))'+ // OR ip (v4) address
-				'(\\:\\d+)?(\\/[-a-z\\d%_.~+]*)*'+ // port and path
-				'(\\?[;&a-z\\d%_.~+=-]*)?'+ // query string
-				'(\\#[-a-z\\d_]*)?$','i'); // fragment locator
-			return !!pattern.test(str);
-		}
-	</script>
-
-	<div class="content">
-		<center>
-			<img src="logo.png" class="logo" draggable="false">
-
-			<div class="search-container">
-				<img src="search.png" class="search-icon" draggable="false">
-				<input type="search" id="input-search" class="input-search" placeholder="" onkeypress="return keyScriptInputSearch(event)" minlength="1" maxlength="500">
-			</div>
-		</center>
-	</div>
-
-
-	<script type="text/javascript">
-		function goSearch() {
-			var searchValue = document.getElementById('input-search').value;
-
-			if (searchValue.length < 1) {
-				alert('Too short!');
-				return;
-			} if (searchValue.length > 500) {
-				alert('Too long!');
-				return;
-			} if (validURL(searchValue)) {
-				if (searchValue.startsWith('https://') || searchValue.startsWith('http://')) {
-					window.location.href = searchValue;
-				} else {
-					window.location.href = 'http://' + searchValue;
-				}
-			} else {
-				window.location.href = 'https://appsmartfind.com/?n=20&q=' + searchValue;
-			}
-		}
-
-		function keyScriptInputSearch(e) {
-		    if (e.keyCode == 13) {
-		        goSearch();
-		        return false;
-		    }
-		}
-	</script>
+            <div class="search-container">
+                <img src="search.png" class="search-icon" draggable="false">
+                <input type="search" id="input-search" class="input-search" placeholder="" onkeypress="return keyScriptInputSearch(event)" minlength="1" maxlength="500">
+            </div>
+        </center>
+    </div>
 </body>
 </html>
