--- a/webeditor/home/index.html
+++ b/webeditor/home/index.html
@@ -43,7 +43,7 @@
             font-family: system-ui;
             font-size: 14px;
             background-color: transparent;
-            width: 350px;
+            width: 80vw;
         }
     </style>
     <script type="text/javascript">
