night theme (test)

--- a/webeditor/home/index.html
+++ b/webeditor/home/index.html
@@ -6,6 +6,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
+        @media (prefers-color-scheme: dark) {
+            body {
+                background-color: #383838;
+                color: white;
+            }
+        }
         div.content {
             display: flex;
             align-items: center;
