--- a/webeditor/home/index.html
+++ b/webeditor/home/index.html
@@ -5,6 +5,7 @@
     <link rel="shortcut icon" href="logo.png" type="image/png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="color-scheme" content="dark"/>
     <style>
         @media (prefers-color-scheme: dark) {
             body {
