--- a/webeditor/home/index.html
+++ b/webeditor/home/index.html
@@ -5,41 +5,18 @@
     <link rel="shortcut icon" href="logo.png" type="image/png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="color-scheme" content="dark"/>
+    <meta name="color-scheme" content="dark light">
     <style>
-        @media (prefers-color-scheme: dark) {
-            body {
-                background-color: #383838;
-                color: white;
-            }
-        }
-        div.content {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        img.logo {
-            width: 120px;
-            margin-bottom: 10px;
-            margin-top: 20px;
-        }
-        img.search-icon {
-            width: 20px;
-            height: 20px;
-            opacity: 0.5;
-            margin-left: 10px;
-            margin-top: 10px;
-        }
         div.search-container {
             display: flex;
             align-content: center;
-            border: 1px solid rgba(0, 0, 0, .1);
             border-radius: 28px;
         }
+
         div.search-container:hover {
             border: 1px solid transparent;
-            box-shadow: 0 1px 10px rgba(0, 0, 0, .2);
         }
+
         input.input-search {
             padding: 10px 0;
             margin: 0 10px;
@@ -50,6 +27,56 @@
             font-size: 14px;
             background-color: transparent;
             width: 80vw;
+        }
+
+        div.content {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        img.logo {
+            width: 120px;
+            margin-bottom: 10px;
+            margin-top: 20px;
+        }
+
+        #search-icon {
+            width: 20px;
+            height: 20px;
+            opacity: 0.5;
+            margin-left: 10px;
+            margin-top: 10px;
+        }
+
+        @media (prefers-color-scheme: dark) {
+            body {
+                background-color: #383838;
+            }
+
+            #search-icon {
+                content: url(search-white.png);
+            }
+
+            div.search-container {
+                border: 1px solid rgba(255, 255, 255, 0.1);
+            }
+
+            div.search-container:hover {
+                box-shadow: 0 1px 10px rgba(255, 255, 255, .1);
+            }
+        }
+
+        @media (prefers-color-scheme: light) {
+
+            div.search-container {
+                border: 1px solid rgba(0, 0, 0, 0.1);
+            }
+
+            div.search-container:hover {
+                box-shadow: 0 1px 10px rgba(0, 0, 0, .1);
+            }
+
         }
     </style>
     <script type="text/javascript">
@@ -100,10 +127,9 @@
             <img src="logo.png" class="logo" draggable="false">
 
             <div class="search-container">
-                <img src="search.png" class="search-icon" draggable="false">
+                <img src="search.png" id="search-icon" draggable="false">
                 <input type="search" id="input-search" class="input-search" placeholder="" onkeypress="return keyScriptInputSearch(event)" minlength="1" maxlength="500">
             </div>
         </center>
     </div>
-</body>
-</html>
+</body></html>
