--- a/webeditor/home/index.html
+++ b/webeditor/home/index.html
@@ -78,6 +78,18 @@
             }
 
         }
+        
+        @media (prefers-color-scheme: no-preference) {
+
+            div.search-container {
+                border: 1px solid rgba(0, 0, 0, 0.1);
+            }
+
+            div.search-container:hover {
+                box-shadow: 0 1px 10px rgba(0, 0, 0, .1);
+            }
+
+        }
     </style>
     <script type="text/javascript">
         function validURL(str) {
