--- a/webeditor/home/index.html
+++ b/webeditor/home/index.html
@@ -68,8 +68,32 @@
                 box-shadow: 0 1px 10px rgba(255, 255, 255, .1);
             }
         }
+
+        .dark-mode {
+            background-color: #383838;
+            color: aliceblue;
+        }
+
+        div.dark-mode.search-container {
+            border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        div.dark-mode.search-container:hover {
+            box-shadow: 0 1px 10px rgba(255, 255, 255, .1);
+        }
     </style>
     <script type="text/javascript">
+        function switchTheme() {
+            document.body.classList.toggle("dark-mode")
+            document.getElementsByClassName("search-container")[0].classList.toggle("dark-mode")
+            var x = document.getElementById("search-icon").src;
+            if (x.endsWith("white.png")) {
+                document.getElementById("search-icon").src = "search.png"
+            } else {
+                document.getElementById("search-icon").src = "search-white.png"
+            }
+        }
+
         function validURL(str) {
             var pattern = new RegExp('^(https?:\\/\\/)?' + // protocol
                 '((([a-z\\d]([a-z\\d-]*[a-z\\d])*)\\.)+[a-z]{2,}|' + // domain name
