--- a/privacy.html
+++ b/privacy.html
@@ -91,7 +91,7 @@
                     responsibility for the content, privacy policies, or
                     practices of any third-party sites or services.
                   </p> <p><strong>Children’s Privacy</strong></p> <p>
-                    These services are completely safe to use for children under 13.
+                    These services are not intended for children under 13.
                     I do not knowingly collect personally
                     identifiable information from children under 13. In the case
                     I discover that a child under 13 has provided
