--- a/webeditor/js-editor.html
+++ b/webeditor/js-editor.html
@@ -20,8 +20,8 @@
     editor = CodeMirror(document.body, {
         value: 
         "//write your JavaScript code\n" +
-        "//**function calls (eg. alert()) will get executed immediately" +
-        "//**you can define your own functions here and call them later",
+        "//**function calls (eg. alert()) will get executed immediately\n" +
+        "//**you can define your own functions here and call them later\n",
         mode: "javascript",
         lineNumbers: true,
         fixedGutter: false,
