--- a/mobilearn/index.html
+++ b/mobilearn/index.html
@@ -3,35 +3,33 @@
 
 <head>
     <title>MobiLearn</title>
-	<meta charset="utf-8">
-    <link id="style" href="./style.css" rel="stylesheet"/>
+    <meta charset="utf-8">
+    <link id="style" href="./style.css" rel="stylesheet" />
+    <link id="style" href="./style.css" rel="stylesheet" media="prefers-color-scheme: light" />
+    <link id="style" href="./style.css" rel="stylesheet" media="prefers-color-scheme: dark" />
     <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport">
-	
-<script type="text/javascript" src="./script.js"></script>
+    <script type="text/javascript" src="./script.js"></script>
 </head>
 
 <body>
-
-
-<a href="categories/FQrw8s6S8Tk.html">
-    <button class="main_item">Гуманитарные науки</button>
-</a>
-<a href="categories/scbnTECbVYb.html">
-    <button class="main_item">Естественные науки</button>
-</a>
-<a href="categories/rNNd3egVj6U.html">
-    <button class="main_item">Медицинские дисциплины</button>
-</a>
-<a href="categories/Qzz87sQwbbU.html">
-    <button class="main_item">Технические науки</button>
-</a>
-<a href="categories/oJDb1KkbkcE.html">
-    <button class="main_item">Экономические науки</button>
-</a>
-<a href="categories/bzRupn7kGec.html">
-    <button class="main_item">Юридические дисциплины</button>
-</a>
-
+    <a href="categories/FQrw8s6S8Tk.html">
+        <button class="main_item">Гуманитарные науки</button>
+    </a>
+    <a href="categories/scbnTECbVYb.html">
+        <button class="main_item">Естественные науки</button>
+    </a>
+    <a href="categories/rNNd3egVj6U.html">
+        <button class="main_item">Медицинские дисциплины</button>
+    </a>
+    <a href="categories/Qzz87sQwbbU.html">
+        <button class="main_item">Технические науки</button>
+    </a>
+    <a href="categories/oJDb1KkbkcE.html">
+        <button class="main_item">Экономические науки</button>
+    </a>
+    <a href="categories/bzRupn7kGec.html">
+        <button class="main_item">Юридические дисциплины</button>
+    </a>
 </body>
 
 </html>
