--- a/mobilearn/index.html
+++ b/mobilearn/index.html
@@ -4,8 +4,7 @@
 <head>
     <title>MobiLearn</title>
     <meta charset="utf-8">
-    <link id="style" href="./style.css" rel="stylesheet" media="(prefers-color-scheme: light)" />
-    <link id="style" href="./style-dark.css" rel="stylesheet" media="(prefers-color-scheme: dark)" />
+    <link id="style" href="./style.css" rel="stylesheet" />
     <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport">
     <script type="text/javascript" src="./script.js"></script>
 </head>
