--- a/mobilearn/index.html
+++ b/mobilearn/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <link href="./style.css" rel="stylesheet" />
     <meta content="width=device-width, initial-scale=1, user-scalable=no" name="viewport">
-    <script type="text/javascript" src="./script.js"></script>
+    <script src="./script.js"></script>
 </head>
 
 <body>
