--- a/webeditor/home/index.html
+++ b/webeditor/home/index.html
@@ -1,156 +1,145 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <title>Input URL or Search</title>
-    <link rel="shortcut icon" href="logo.png" type="image/png">
+  <head>
+    <title>Input URL or search query</title>
+    <link rel="shortcut icon" href="logo.png" type="image/png" />
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="color-scheme" content="dark light">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="color-scheme" content="dark light" />
     <style>
-        :root {
-            color-scheme: light dark;
+      div.search-container {
+        display: flex;
+        align-content: center;
+        border-radius: 28px;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+      }
+
+      div.search-container:hover {
+        border: 1px solid transparent;
+        box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+      }
+
+      input.input-search {
+        padding: 10px 0;
+        margin: 0 10px;
+        outline: none;
+        border: none;
+        font-weight: 600;
+        font-family: system-ui;
+        font-size: 14px;
+        background-color: transparent;
+        width: 80vw;
+      }
+
+      div.content {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      img.logo {
+        width: 120px;
+        margin-bottom: 10px;
+        margin-top: 20px;
+      }
+
+      #search-icon {
+        width: 20px;
+        height: 20px;
+        opacity: 0.5;
+        margin-left: 10px;
+        margin-top: 10px;
+      }
+
+      @media (prefers-color-scheme: dark) {
+        body {
+          background-color: #383838;
         }
         div.search-container {
-            display: flex;
-            align-content: center;
-            border-radius: 28px;
-            border: 1px solid rgba(0, 0, 0, 0.1);
+          border: 1px solid rgba(255, 255, 255, 0.1);
         }
-
         div.search-container:hover {
-            border: 1px solid transparent;
-            box-shadow: 0 1px 10px rgba(0, 0, 0, .1);
+          box-shadow: 0 1px 10px rgba(255, 255, 255, 0.1);
         }
+      }
 
-        input.input-search {
-            padding: 10px 0;
-            margin: 0 10px;
-            outline: none;
-            border: none;
-            font-weight: 600;
-            font-family: system-ui;
-            font-size: 14px;
-            background-color: transparent;
-            width: 80vw;
-        }
+      .dark-mode {
+        background-color: #383838;
+        color: aliceblue;
+      }
 
-        div.content {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+      div.dark-mode.search-container {
+        border: 1px solid rgba(255, 255, 255, 0.1);
+      }
 
-        img.logo {
-            width: 120px;
-            margin-bottom: 10px;
-            margin-top: 20px;
-        }
-
-        #search-icon {
-            width: 20px;
-            height: 20px;
-            opacity: 0.5;
-            margin-left: 10px;
-            margin-top: 10px;
-        }
-
-        @media (prefers-color-scheme: dark) {
-            body {
-                background-color: #383838;
-            }
-
-            #search-icon {
-                content: url(search-white.png);
-            }
-
-            div.search-container {
-                border: 1px solid rgba(255, 255, 255, 0.1);
-            }
-
-            div.search-container:hover {
-                box-shadow: 0 1px 10px rgba(255, 255, 255, .1);
-            }
-        }
-
-        .dark-mode {
-            background-color: #383838;
-            color: aliceblue;
-        }
-
-        div.dark-mode.search-container {
-            border: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
-        div.dark-mode.search-container:hover {
-            box-shadow: 0 1px 10px rgba(255, 255, 255, .1);
-        }
+      div.dark-mode.search-container:hover {
+        box-shadow: 0 1px 10px rgba(255, 255, 255, 0.1);
+      }
     </style>
     <script type="text/javascript">
-        function switchTheme() {
-            document.body.classList.toggle("dark-mode")
-            document.getElementsByClassName("search-container")[0].classList.toggle("dark-mode")
-            var x = document.getElementById("search-icon").src;
-            if (x.endsWith("white.png")) {
-                document.getElementById("search-icon").src = "search.png"
-            } else {
-                document.getElementById("search-icon").src = "search-white.png"
-            }
-        }
+      function validURL(str) {
+        var pattern = new RegExp(
+          '^(https?:\\/\\/)?' + // protocol
+          '((([a-z\\d]([a-z\\d-]*[a-z\\d])*)\\.)+[a-z]{2,}|' + // domain name
+          '((\\d{1,3}\\.){3}\\d{1,3}))' + // OR ip (v4) address
+          '(\\:\\d+)?(\\/[-a-z\\d%_.~+]*)*' + // port and path
+          '(\\?[;&a-z\\d%_.~+=-]*)?' + // query string
+            '(\\#[-a-z\\d_]*)?$',
+          'i',
+        ) // fragment locator
+        return !!pattern.test(str)
+      }
 
-        function validURL(str) {
-            var pattern = new RegExp('^(https?:\\/\\/)?' + // protocol
-                '((([a-z\\d]([a-z\\d-]*[a-z\\d])*)\\.)+[a-z]{2,}|' + // domain name
-                '((\\d{1,3}\\.){3}\\d{1,3}))' + // OR ip (v4) address
-                '(\\:\\d+)?(\\/[-a-z\\d%_.~+]*)*' + // port and path
-                '(\\?[;&a-z\\d%_.~+=-]*)?' + // query string
-                '(\\#[-a-z\\d_]*)?$', 'i'); // fragment locator
-            return !!pattern.test(str);
+      function goSearch() {
+        var searchValue = document.getElementById('input-search').value
+        if (validURL(searchValue)) {
+          if (
+            searchValue.startsWith('https://') ||
+            searchValue.startsWith('http://')
+          ) {
+            window.location.href = searchValue
+          } else {
+            window.location.href = 'http://' + searchValue
+          }
+        } else {
+          window.location.href =
+            'https://appsmartfind.com/?n=20&q=' + searchValue
         }
-
-        function goSearch() {
-            var searchValue = document.getElementById('input-search').value;
-
-            if (searchValue.length < 1) {
-                alert('Too short!');
-                return;
-            }
-            if (searchValue.length > 500) {
-                alert('Too long!');
-                return;
-            }
-            if (validURL(searchValue)) {
-                if (searchValue.startsWith('https://') || searchValue.startsWith('http://')) {
-                    window.location.href = searchValue;
-                } else {
-                    window.location.href = 'http://' + searchValue;
-                }
-            } else {
-                window.location.href = 'https://appsmartfind.com/?n=20&q=' + searchValue;
-            }
+      }
+      
+      function keyScriptInputSearch(e) {
+        if (e.keyCode == 13) {
+          goSearch()
+          return false
         }
-
-        function keyScriptInputSearch(e) {
-            if (e.keyCode == 13) {
-                goSearch();
-                return false;
-            }
-        }
+      }
     </script>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="content">
-        <center>
-            <img src="logo.png" class="logo" draggable="false">
+      <center>
+        <img src="logo.png" class="logo" />
 
-            <div class="search-container">
-                <img src="search.png" id="search-icon" draggable="false">
-                <input type="search" id="input-search" class="input-search" placeholder=""
-                    onkeypress="return keyScriptInputSearch(event)" minlength="1" maxlength="500">
-            </div>
-        </center>
+        <div class="search-container">
+          <picture>
+            <source
+              srcset="search-white.png"
+              media="(prefers-color-scheme: dark)"
+            />
+            <img src="search.png"  id="search-icon"/>
+          </picture>
+          <input
+            type="search"
+            id="input-search"
+            class="input-search"
+            placeholder=""
+            onkeypress="return keyScriptInputSearch(event)"
+            minlength="1"
+            maxlength="500"
+          />
+        </div>
+      </center>
     </div>
-</body>
-
+  </body>
 </html>
