--- a/webeditor/home/index.html
+++ b/webeditor/home/index.html
@@ -57,6 +57,7 @@
         }
         div.search-container {
           border: 1px solid rgba(255, 255, 255, 0.1);
+          color: white;
         }
         div.search-container:hover {
           box-shadow: 0 1px 10px rgba(255, 255, 255, 0.1);
