--- a/webeditor/home/index.html
+++ b/webeditor/home/index.html
@@ -55,6 +55,7 @@
       @media (prefers-color-scheme: dark) {
         body {
           background-color: #383838;
+          color: white;
         }
         div.search-container {
           border: 1px solid rgba(255, 255, 255, 0.1);
