--- a/webeditor/home/index.html
+++ b/webeditor/home/index.html
@@ -121,6 +121,7 @@
             <img src="search.png" id="search-icon" />
           </picture>
           <input
+            id="input-search"
             type="search"
             onkeypress="return keyScriptInputSearch(event)"
             minlength="1"
