--- a/webeditor/home/index.html
+++ b/webeditor/home/index.html
@@ -94,7 +94,7 @@
           }
         } else {
           window.location.href =
-            'https://appsmartfind.com/?n=20&q=' + searchValue
+            'https://google.com/search?q=' + searchValue
         }
       }
 
