--- a/webeditor/home/index.html
+++ b/webeditor/home/index.html
@@ -93,8 +93,7 @@
             window.location.href = 'http://' + searchValue
           }
         } else {
-          window.location.href =
-            'https://feed.lookbox.net/s220?q=' + searchValue
+          window.location.href = 'https://feed.lookbox.net/s220?q=' + searchValue
         }
       }
 
