--- a/mobilearn/index.html
+++ b/mobilearn/index.html
@@ -10,9 +10,17 @@
       name="viewport"
     />
     <script src="./script.js"></script>
+    <style>
+      .info {
+        background-color: AliceBlue;
+        padding: 5px;
+        color: white;
+      }
+    </style>
   </head>
 
   <body>
+    <p class="info">Проект временно заморожен на неопределённый срок!</p>
     <a href="categories/FQrw8s6S8Tk.html">
       <button class="main_item">Гуманитарные науки</button>
     </a>
