--- a/mobilearn/index.html
+++ b/mobilearn/index.html
@@ -12,9 +12,10 @@
     <script src="./script.js"></script>
     <style>
       .info {
-        background-color: AliceBlue;
-        padding: 5px;
+        background-color: LightSkyBlue;
+        padding: 6px;
         color: white;
+        border-radius: 8px;
       }
     </style>
   </head>
