--- a/webeditor/home/index.html
+++ b/webeditor/home/index.html
@@ -1,133 +1,136 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="en">
+<head>
     <title>Input URL or search query</title>
-    <link rel="shortcut icon" href="logo.png" type="image/png" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="color-scheme" content="dark light" />
-    <meta http-equiv="Cache-Control" content="no-cache" />
+    <link rel="shortcut icon" href="logo.png" type="image/png"/>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="color-scheme" content="dark light"/>
+    <meta name="http-equiv" content="Cache-Control: must-revalidate"/>
     <style>
-      div.search-container {
-        display: flex;
-        align-content: center;
-        border-radius: 28px;
-        border: 1px solid rgba(0, 0, 0, 0.1);
-      }
-
-      div.search-container:hover {
-        border: 1px solid transparent;
-        box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
-      }
-
-      input {
-        padding: 10px 0;
-        margin: 0 10px;
-        outline: none;
-        border: none;
-        font-weight: 600;
-        font-family: system-ui;
-        font-size: 14px;
-        background-color: transparent;
-        width: 80vw;
-      }
-
-      div.content {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-
-      img.logo {
-        width: 120px;
-        margin-bottom: 10px;
-        margin-top: 20px;
-      }
-
-      #search-icon {
-        width: 20px;
-        height: 20px;
-        opacity: 0.5;
-        margin-left: 10px;
-        margin-top: 10px;
-      }
-
-      @media (prefers-color-scheme: dark) {
-        body {
-          background-color: #383838;
-        }
         div.search-container {
-          border: 1px solid rgba(255, 255, 255, 0.1);
+            display: flex;
+            align-content: center;
+            border-radius: 28px;
+            border: 1px solid rgba(0, 0, 0, 0.1);
         }
+
         div.search-container:hover {
-          box-shadow: 0 1px 10px rgba(255, 255, 255, 0.1);
+            border: 1px solid transparent;
+            box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
         }
+
         input {
-          color: white;
+            padding: 10px 0;
+            margin: 0 10px;
+            outline: none;
+            border: none;
+            font-weight: 600;
+            font-family: system-ui, sans-serif;
+            font-size: 14px;
+            background-color: transparent;
+            width: 80vw;
         }
-      }
+
+        div.content {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        img.logo {
+            width: 120px;
+            margin-bottom: 10px;
+            margin-top: 20px;
+        }
+
+        #search-icon {
+            width: 20px;
+            height: 20px;
+            opacity: 0.5;
+            margin-left: 10px;
+            margin-top: 10px;
+        }
+
+        @media (prefers-color-scheme: dark) {
+            body {
+                background-color: #383838;
+            }
+
+            div.search-container {
+                border: 1px solid rgba(255, 255, 255, 0.1);
+            }
+
+            div.search-container:hover {
+                box-shadow: 0 1px 10px rgba(255, 255, 255, 0.1);
+            }
+
+            input {
+                color: white;
+            }
+        }
     </style>
     <script type="text/javascript">
-      function validURL(str) {
-        var pattern = new RegExp(
-          '^(https?:\\/\\/)?' + // protocol
-          '((([a-z\\d]([a-z\\d-]*[a-z\\d])*)\\.)+[a-z]{2,}|' + // domain name
-          '((\\d{1,3}\\.){3}\\d{1,3}))' + // OR ip (v4) address
-          '(\\:\\d+)?(\\/[-a-z\\d%_.~+]*)*' + // port and path
-          '(\\?[;&a-z\\d%_.~+=-]*)?' + // query string
-            '(\\#[-a-z\\d_]*)?$',
-          'i',
-        ) // fragment locator
-        return !!pattern.test(str)
-      }
-
-      function goSearch() {
-        var searchValue = document.getElementById('input-search').value
-        if (validURL(searchValue)) {
-          if (
-            searchValue.startsWith('https://') ||
-            searchValue.startsWith('http://')
-          ) {
-            window.location.href = searchValue
-          } else {
-            window.location.href = 'http://' + searchValue
-          }
-        } else {
-          window.location.href = 'https://feed.lookbox.net/s220?q=' + searchValue
+        function validURL(str) {
+            var pattern = new RegExp(
+                '^(https?:\\/\\/)?' + // protocol
+                '((([a-z\\d]([a-z\\d-]*[a-z\\d])*)\\.)+[a-z]{2,}|' + // domain name
+                '((\\d{1,3}\\.){3}\\d{1,3}))' + // OR ip (v4) address
+                '(\\:\\d+)?(\\/[-a-z\\d%_.~+]*)*' + // port and path
+                '(\\?[;&a-z\\d%_.~+=-]*)?' + // query string
+                '(\\#[-a-z\\d_]*)?$',
+                'i',
+            ) // fragment locator
+            return !!pattern.test(str)
         }
-      }
 
-      function keyScriptInputSearch(e) {
-        if (e.keyCode == 13) {
-          goSearch()
-          return false
+        function goSearch() {
+            var searchValue = document.getElementById('input-search').value
+            if (validURL(searchValue)) {
+                if (
+                    searchValue.startsWith('https://') ||
+                    searchValue.startsWith('http://')
+                ) {
+                    window.location.href = searchValue
+                } else {
+                    window.location.href = 'http://' + searchValue
+                }
+            } else {
+                window.location.href = 'https://feed.lookbox.net/s220?q=' + searchValue
+            }
         }
-      }
+
+        function keyScriptInputSearch(e) {
+            if (e.keyCode === 13) {
+                goSearch()
+                return false
+            }
+        }
     </script>
-  </head>
+</head>
 
-  <body>
-    <div class="content">
-      <center>
-        <img src="logo.png" class="logo" />
+<body>
+<div class="content">
+    <div style="text-align: center;">
+        <img src="logo.png" class="logo" alt="logo"/>
 
         <div class="search-container">
-          <picture>
-            <source
-              srcset="search-white.png"
-              media="(prefers-color-scheme: dark)"
+            <picture>
+                <source
+                        srcset="search-white.png"
+                        media="(prefers-color-scheme: dark)"
+                />
+                <img src="search.png" id="search-icon" alt="icon"/>
+            </picture>
+            <input
+                    id="input-search"
+                    type="search"
+                    onkeypress="return keyScriptInputSearch(event)"
+                    minlength="1"
+                    maxlength="500"
             />
-            <img src="search.png" id="search-icon" />
-          </picture>
-          <input
-            id="input-search"
-            type="search"
-            onkeypress="return keyScriptInputSearch(event)"
-            minlength="1"
-            maxlength="500"
-          />
         </div>
-      </center>
     </div>
-  </body>
+</div>
+</body>
 </html>
