--- a/mobilearn/index.html
+++ b/mobilearn/index.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html lang="ru">
+<head>
     <title>MobiLearn</title>
-    <meta charset="utf-8" />
-    <link href="./style.css" rel="stylesheet" />
-    <meta name="color-scheme" content="dark light" />
-    <meta http-equiv="Cache-Control" content="no-cache" />
+    <meta charset="utf-8"/>
+    <link href="./style.css" rel="stylesheet"/>
+    <meta name="color-scheme" content="dark light"/>
+    <meta name="http-equiv" content="Cache-Control: must-revalidate">
     <meta
-      content="width=device-width, initial-scale=1, user-scalable=no"
-      name="viewport"
+            content="width=device-width, initial-scale=1, user-scalable=no"
+            name="viewport"
     />
     <script src="./script.js"></script>
     <style>
-      .info {
-        background-color: LightSkyBlue;
-        padding: 6px;
-        color: white;
-        border-radius: 8px;
-      }
+        .info {
+            background-color: LightSkyBlue;
+            padding: 6px;
+            color: white;
+            border-radius: 8px;
+        }
     </style>
-  </head>
+</head>
 
-  <body>
-    <a href="categories/FQrw8s6S8Tk.html">
-      <button class="main_item">Гуманитарные науки</button>
-    </a>
-    <a href="categories/scbnTECbVYb.html">
-      <button class="main_item">Естественные науки</button>
-    </a>
-    <a href="categories/rNNd3egVj6U.html">
-      <button class="main_item">Медицинские дисциплины</button>
-    </a>
-    <a href="categories/Qzz87sQwbbU.html">
-      <button class="main_item">Технические науки</button>
-    </a>
-    <a href="categories/oJDb1KkbkcE.html">
-      <button class="main_item">Экономические науки</button>
-    </a>
-    <a href="categories/bzRupn7kGec.html">
-      <button class="main_item">Юридические дисциплины</button>
-    </a>
-  </body>
+<body>
+<a href="categories/FQrw8s6S8Tk.html">
+    <button class="main_item">Гуманитарные науки</button>
+</a>
+<a href="categories/scbnTECbVYb.html">
+    <button class="main_item">Естественные науки</button>
+</a>
+<a href="categories/rNNd3egVj6U.html">
+    <button class="main_item">Медицинские дисциплины</button>
+</a>
+<a href="categories/Qzz87sQwbbU.html">
+    <button class="main_item">Технические науки</button>
+</a>
+<a href="categories/oJDb1KkbkcE.html">
+    <button class="main_item">Экономические науки</button>
+</a>
+<a href="categories/bzRupn7kGec.html">
+    <button class="main_item">Юридические дисциплины</button>
+</a>
+</body>
 </html>
